finalize stage done